disable comments on pages, spacing fixes

--- a/themes/terminal/assets/css/main.css
+++ b/themes/terminal/assets/css/main.css
@@ -332,3 +332,7 @@ hr {
 .hidden {
   display: none;
 }
+
+#disqus_thread {
+  margin-top: 50px;
+}
